# deepagent-base

./: .env.example  .gitignore  CONFIG_GUIDE.md  CUSTOMIZATION_GUIDE.md  PROJECT_LOG.md  SETUP_GUIDE.md  docker-compose.yml  error_trace.md  pyproject.toml  run.sh
backend/: .dockerignore  AGENTS.md  Dockerfile  __init__.py  agent.py  agent_logger.py  callback_handler.py  config.py  main.py  mcp_config.json  mcp_tools.py  prompts.py  requirements.txt  schemas.py  workflow_graph.html
backend/config/: AGENTS.md  mcp_config.json
backend/skills/: hug_rag.md
docs/: Custom Middleware.md  DeepAgents 기반 워크플로우 전환.md  LANGGRAPH_INTEGRATION_PLAN.md  context_plan.md  context_review.md  customization_roadmap.md  deepagents.md  mcps.md  plan.md  추가 미들웨어 적용 가이드.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AssistantMessage.tsx  ChatArea.tsx  ChatInput.tsx  CollapsibleSteps.tsx  DataCardGrid.tsx  McpOverlay.tsx  MetadataPanel.tsx  ReasoningPanel.tsx  ReasoningStepItem.tsx  Sidebar.tsx  TopNav.tsx  UserMessage.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
mcp_servers/: Dockerfile  Dockerfile.gpu  run_all.sh
mcp_servers/.pids/: news.pid
mcp_servers/_template/: server.py
mcp_servers/apt-develop/: requirements.txt  server.py
mcp_servers/apt-metadata/: requirements.txt  server.py
mcp_servers/apt-review/: requirements.txt  server.py
mcp_servers/hug-rag/: requirements.txt  server.py  uploader.py
mcp_servers/news/: requirements.txt  server.py
